Обновленое логирование